--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "intl": "^1.2.5",
     "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
