--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
               "src/styles.css"
             ],
             "scripts": [
+              "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/tether/dist/js/tether.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
