--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "core-js": "^2.5.4",
     "intl": "^1.2.5",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.5",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
-    "tether": "^1.4.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
